# PP_2

./: .env.vault  .gitignore  connection.py  main.py  pyproject.toml  setup.cfg  test.py
models/: model.py  models.py
modules/: connection.py  service.py
